--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,28 @@
-# Created by https://www.toptal.com/developers/gitignore/api/scala,sbt,visualstudiocode,java
-# Edit at https://www.toptal.com/developers/gitignore?templates=scala,sbt,visualstudiocode,java
+### Intellij ###
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+.idea
+
+# CMake
+cmake-build-*/
+
+# File-based project format
+*.iws
+
+# IntelliJ
+out/
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
 
 ### Java ###
 # Compiled class file
@@ -40,7 +63,6 @@ project/plugins/project/
 .history
 .cache
 .lib/
-.idea/
 
 ### SBT Patch ###
 .bsp/
@@ -49,22 +71,4 @@ project/plugins/project/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 
-### VisualStudioCode ###
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-!.vscode/*.code-snippets
-
-# Local History for Visual Studio Code
-.history/
-
-# Built Visual Studio Code Extensions
-*.vsix
-
-### VisualStudioCode Patch ###
-# Ignore all local history of files
-.ionide
-
-# End of https://www.toptal.com/developers/gitignore/api/scala,sbt,visualstudiocode,java
+# End of https://www.toptal.com/developers/gitignore/api/intellij,sbt,scala,java
